--- a/index.html
+++ b/index.html
@@ -1114,10 +1114,9 @@
     <section class="hero-banner" itemprop="mainContentOfPage">
         <div class="banner-background">
             <div class="banner-content">
-                <h1 class="banner-title" itemprop="headline">Discover Excellence in Education</h1>
+                <h1 class="banner-title" itemprop="headline">Academic Elegance & Efficiency</h1>
                 <p class="banner-subtitle" itemprop="description">
-                    Scholastic Forum brings you comprehensive insights into educational institutions. 
-                    Explore detailed profiles, compare facilities, and make informed decisions for your educational journey.
+                    Scholastic Forum brings you comprehensive insights into educational institutions.
                 </p>
                 <a href="#schools" class="cta-button pulse" itemprop="significantLink">
                     <i class="fas fa-search"></i> Explore Schools
@@ -1300,8 +1299,8 @@
                 <div class="footer-section">
                     <h3>Contact Information</h3>
                     <ul class="footer-links">
-                        <li><a href="mailto:support@scholasticforum.org"><i class="fas fa-envelope"></i> support@scholasticforum.org</a></li>
-                        <li><a href="tel:+263123456789"><i class="fas fa-phone"></i> +263 123 456 789</a></li>
+                        <li><a href="mailto:scholasticserviceszw@gmail.com"><i class="fas fa-envelope"></i> support@scholasticforum.org</a></li>
+                        <li><a href="tel:+263785558261"><i class="fas fa-phone"></i> +263 785 558 261</a></li>
                         <li><a href="#" itemprop="address" itemscope itemtype="https://schema.org/PostalAddress"><i class="fas fa-map-marker-alt"></i> Harare, Zimbabwe</a></li>
                         <li><a href="#" itemprop="name"><i class="fas fa-building"></i> High Voltage Software Technologies</a></li>
                         <li><a href="https://hvstechzw.github.io/Scholastic-Services-Web-Portal/" target="_blank"><i class="fas fa-globe"></i> Scholastic Services Portal</a></li>
@@ -1310,7 +1309,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; <span itemprop="copyrightYear">2025</span> Scholastic Forum | A Scholastic Services Product | Powered by High Voltage Software Technologies</p>
+                <p>&copy; <span itemprop="copyrightYear">2026</span> Scholastic Forum | A Scholastic Services Product | Powered by High Voltage Software Technologies</p>
                 <p style="margin-top: 0.5rem; font-size: 0.8rem;">Comprehensive School Directory & Management System</p>
             </div>
         </div>
